--- a/home.html
+++ b/home.html
@@ -8,7 +8,12 @@
 
 <div class="container-fluid row">
   <div class="left-content col-12 col-md-8">
-    <div class="album">album</div>
+    <div class="album row">
+      <h1>Album</h1>
+      <div class="album1 col-md-4 col-sm-8 col-12">
+        <img src="" alt="" class="img-fluid" />
+      </div>
+    </div>
 
     <div class="category">category</div>
   </div>
