--- a/home.html
+++ b/home.html
@@ -5,22 +5,24 @@
     text-align: center;
   }
 </style>
-
-<div class="container-fluid row">
-  <div class="left-content col-12 col-md-8">
-    <div class="album row">
-      <h1>Album</h1>
-      <div class="album1 col-md-4 col-sm-8 col-12">
-        <img src="" alt="" class="img-fluid" />
+<div class="container-fluid">
+  <div class="carousel">carousel</div>
+  <div class="row">
+    <div class="left-content col-12 col-md-8">
+      <div class="album row">
+        <h1>Album</h1>
+        <div class="album1 col-md-4 col-sm-8 col-12">
+          <img src="" alt="" class="img-fluid" />
+        </div>
       </div>
+
+      <div class="category">category</div>
     </div>
 
-    <div class="category">category</div>
-  </div>
-
-  <div class="right-content col-12 col-md-4">
-    <div class="liveShows">liveshow</div>
-    <div class="contest">contest</div>
-    <div class="soldMonthly">sold monthly</div>
+    <div class="right-content col-12 col-md-4">
+      <div class="liveShows">liveshow</div>
+      <div class="contest">contest</div>
+      <div class="soldMonthly">sold monthly</div>
+    </div>
   </div>
 </div>
