--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                   alt="logo"
                   width="40px"
                   height="40px"
+                  style="border-radius: 20px"
                 />
               </a>
             </li>
