--- a/home.html
+++ b/home.html
@@ -1,28 +1,240 @@
 <style>
   * {
     align-items: center;
-    justify-items: center;
+    justify-content: center;
     text-align: center;
+  }
+  .liveshow2,
+  .liveshow1,
+  .album1,
+  .album2,
+  .category1,
+  .category2,
+  .soldMonthly1,
+  .soldMonthly2,
+  .contest1,
+  .contest2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  h1 {
+    font-size: 3vw;
+  }
+  .cart {
+    background-color: rgb(123, 122, 122);
+    width: fit-content;
   }
 </style>
 <div class="container-fluid">
-  <div class="carousel">carousel</div>
+  <div class="carousel row" style="display: flex">
+    <!-- Carousel -->
+    <div id="demo" class="carousel slide col-md-10" data-bs-ride="carousel">
+      <!-- Indicators/dots -->
+      <div class="carousel-indicators">
+        <button
+          type="button"
+          data-bs-target="#demo"
+          data-bs-slide-to="0"
+          class="active"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#demo"
+          data-bs-slide-to="1"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#demo"
+          data-bs-slide-to="2"
+        ></button>
+      </div>
+
+      <!-- The slideshow/carousel -->
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img
+            src="image/soul.jpg"
+            alt="Los Angeles"
+            class="d-block"
+            style="width: 100%"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            src="image/souloftheforest.jpg"
+            alt="Chicago"
+            class="d-block"
+            style="width: 100%"
+          />
+        </div>
+        <div class="carousel-item">
+          <img
+            src="image/maylangthang.jpg"
+            alt="New York"
+            class="d-block"
+            style="width: 100%"
+          />
+        </div>
+      </div>
+
+      <!-- Left and right controls/icons -->
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#demo"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon"></span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#demo"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon"></span>
+      </button>
+    </div>
+  </div>
+
   <div class="row">
     <div class="left-content col-12 col-md-8">
       <div class="album row">
         <h1>Album</h1>
-        <div class="album1 col-md-4 col-sm-8 col-12">
-          <img src="" alt="" class="img-fluid" />
+        <div class="album1 col-6">
+          <div class="cart">
+            <img
+              src="image/baihathaynhat.jpg"
+              alt=""
+              width="1920px"
+              class="img-fluid"
+            />
+            <p>The best song</p>
+          </div>
+        </div>
+        <div class="album2 col-6">
+          <div class="cart">
+            <img
+              src="image/okComputer.png"
+              alt=""
+              width="1920px"
+              class="img-fluid"
+            />
+            <p>Ok computer</p>
+          </div>
         </div>
       </div>
 
-      <div class="category">category</div>
+      <div class="category row">
+        <h1>Category</h1>
+        <div class="category1 col-6">
+          <div class="cart">
+            <img
+              src="image/baihathaynhat.jpg"
+              alt=""
+              width="1920px"
+              class="img-fluid"
+            />
+            <p>The best song</p>
+          </div>
+        </div>
+        <div class="category2 col-6">
+          <div class="cart">
+            <img
+              src="image/okComputer.png"
+              alt=""
+              width="1920px"
+              class="img-fluid"
+            />
+            <p>Ok computer</p>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div class="right-content col-12 col-md-4">
-      <div class="liveShows">liveshow</div>
-      <div class="contest">contest</div>
-      <div class="soldMonthly">sold monthly</div>
+      <div class="liveShows">
+        <div class="liveshow row">
+          <h1>Live Shows</h1>
+          <div class="liveshow1 col-6">
+            <div class="cart">
+              <img
+                src="image/baihathaynhat.jpg"
+                alt=""
+                width="1920px"
+                class="img-fluid"
+              />
+              <p>The best song</p>
+            </div>
+          </div>
+          <div class="liveshow2 col-6">
+            <div class="cart">
+              <img
+                src="image/okComputer.png"
+                alt=""
+                width="1920px"
+                class="img-fluid"
+              />
+              <p>Ok computer</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="contest">
+        <div class="contest row">
+          <h1>Contest</h1>
+          <div class="contest1 col-6">
+            <div class="cart">
+              <img
+                src="image/baihathaynhat.jpg"
+                alt=""
+                width="1920px"
+                class="img-fluid"
+              />
+              <p>The best song</p>
+            </div>
+          </div>
+          <div class="contest2 col-6">
+            <div class="cart">
+              <img
+                src="image/okComputer.png"
+                alt=""
+                width="1920px"
+                class="img-fluid"
+              />
+              <p>Ok computer</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="soldMonthly">
+        <div class="soldMonthly row">
+          <h1>Sold Monthly</h1>
+          <div class="soldMonthly1 col-6">
+            <div class="cart">
+              <img
+                src="image/baihathaynhat.jpg"
+                alt=""
+                width="1920px"
+                class="img-fluid"
+              />
+              <p>The best song</p>
+            </div>
+          </div>
+          <div class="soldMonthly2 col-6">
+            <div class="cart">
+              <img
+                src="image/okComputer.png"
+                alt=""
+                width="1920px"
+                class="img-fluid"
+              />
+              <p>Ok computer</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
