--- a/membership.html
+++ b/membership.html
@@ -1,46 +1,126 @@
 <style>
   div.container-fluid {
+    align-items: center;
     justify-content: center;
   }
-  div.button {
-    padding: 1vw 0 1vw 0;
-    background-color: rgb(246, 229, 207);
+  div.right-infor {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100px;
   }
-  div.leftMember {
+  div.left-infor {
+    display: flexbox;
+    align-items: center;
+    justify-content: center;
+  }
+  div.member-image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  div.isMember {
     text-align: center;
   }
-  .list-unstyled li {
-    padding: 0 0 10px 10px;
-    color: rgb(158, 157, 155);
+  div.notMember {
+    text-align: center;
+    padding: 40px 40px 40px 40px;
+    background-image: linear-gradient(0, rgb(216, 187, 25), rgb(239, 60, 11));
+    border-radius: 50px;
+  }
+  #nmrfn {
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+      "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    text-shadow: rgb(0, 255, 195) 5px 2px 8px;
+  }
+  div.benefit {
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  .b-dntf {
+    display: flex;
+    justify-content: center;
+  }
+  .b-ntf {
+    padding: 20px;
+    width: fit-content;
+    background-image: linear-gradient(
+      45deg,
+      rgb(64, 64, 250),
+      rgb(39, 231, 174)
+    );
+    border-radius: 20px;
+  }
+  .b-inf {
+    display: flex;
+    justify-content: center;
+  }
+  .b-left {
+    padding: 20px;
+    width: auto;
+    background-image: linear-gradient(
+      45deg,
+      rgb(230, 62, 227),
+      rgb(255, 1, 107)
+    );
+    border-radius: 15px;
+    margin: 10px 5px 10px 5px;
+  }
+  .b-right {
+    padding: 20px;
+    width: auto;
+    background-image: linear-gradient(
+      45deg,
+      rgb(13, 241, 93),
+      rgb(216, 244, 54)
+    );
+    border-radius: 15px;
+    margin: 10px 5px 10px 5px;
   }
 </style>
 
-<div class="container row" ng-controller="membership">
+<div class="container-fluid row" ng-controller="membership">
   <div class="left-infor col-12 col-md-6">
     <div class="member-image">
       <img src="image/member.jpg" alt="" class="img-fluid" />
     </div>
+
     <div class="cal-point">
-      <p>Member benefits:</p>
-      <ul class="list-unstyled">
-        <li>Receive points whenever you make a purchase on website</li>
-        <li>Exchange point into discount code for all the products</li>
-      </ul>
-      <p>
-        You will get 20 points with each product bought.
-        <br />
-        Below are discount code that you can exhange point into (apply for total
-        bill)
-      </p>
-      <ul>
-        <li>50 points = 5% coupon x 10</li>
-        <li>100 points = 10% coupon x 10</li>
-        <li>150 points = 15% coupon x 10</li>
-      </ul>
-      <p>
-        <a href="#!">log-in</a> or <a href="">sign-up</a> for now to be a
-        member!
-      </p>
+      <div class="benefit">
+        <div class="b-dntf mb-3">
+          <div class="b-ntf">
+            <h1 class="memberBenefit">Member benefits</h1>
+          </div>
+        </div>
+        <div class="b-inf row">
+          <div class="b-left col-5">
+            <h6>Receive points when make a purchase</h6>
+          </div>
+          <div class="and col-2">
+            <h4 style="margin-top: 30px">AND</h4>
+          </div>
+          <div class="b-right col-5">
+            <h6>Exchange point into discount voucher</h6>
+          </div>
+        </div>
+        <div class="pep pt-5 pb-3">
+          <h3>You will get 20 points with each product bought!</h3>
+        </div>
+      </div>
+      <div class="cal">
+        <h5>
+          Below are discount code that you can exhange point into (apply for
+          total bill)
+        </h5>
+        <ul>
+          <li>50 points = 5% coupon x 10</li>
+          <li>100 points = 10% coupon x 10</li>
+          <li>150 points = 15% coupon x 10</li>
+        </ul>
+      </div>
     </div>
   </div>
   <div class="right-infor col-12 col-md-6" ng-init="log-in: true">
@@ -51,8 +131,10 @@
       </div>
     </div>
     <div class="notMember" ng-hide="log-in">
-      <p>You are not a member? Registry for now!</p>
-      <input type="button" value="Registry" class="btn btn-primary" />
+      <p id="nmrfn">You are not a member? Registry for now!</p>
+      <a href="#!logInSignUp">
+        <input type="button" value="Registry" class="btn btn-primary" />
+      </a>
     </div>
   </div>
 </div>
