--- a/membership.html
+++ b/membership.html
@@ -96,13 +96,13 @@
           </div>
         </div>
         <div class="b-inf row">
-          <div class="b-left col-5">
+          <div class="b-left col-12 col-xxl-5">
             <h6>Receive points when make a purchase</h6>
           </div>
-          <div class="and col-2">
-            <h4 style="margin-top: 30px">AND</h4>
+          <div class="and col-12 col-xxl-2 align-items-center pt-xxl-4">
+            <h4>AND</h4>
           </div>
-          <div class="b-right col-5">
+          <div class="b-right col-12 col-xxl-5">
             <h6>Exchange point into discount voucher</h6>
           </div>
         </div>
