--- a/index.html
+++ b/index.html
@@ -116,10 +116,227 @@
 
       <!-- FOOTER -->
       <div class="footer">
-        <footer class="row">
-          <div class="left col-md-4">abc</div>
-          <div class="middle col-md-4">xyz</div>
-          <div class="right col-md-4">ghk</div>
+        <footer class="bg-black text-white mt-3">
+          <div class="container text-center text-md-start">
+            <div class="row text-center text-md-start pt-4">
+              <div class="col-md-7 col-lg-5 mx-auto px-5">
+                <h1 class="py-4">Rhythm House</h1>
+                <p>
+                  Established in 2007 by Mark Boatman and David McGuire, Rhythm
+                  House has become synonymous with fun and informative drum
+                  lessons in Singapore. <br />
+                  <br />
+
+                  Mark and David were both teaching English when they met in
+                  2003. They both shared a love of drums and a passion for
+                  teaching. Both Mark and David were active on the local music
+                  scene and often received requests for drum lessons. <br />
+                </p>
+              </div>
+              <div class="col-md-5 col-lg-3 px-5">
+                <h1 class="py-4">Product</h1>
+                <ul class="list-unstyled list-inline">
+                  <li>
+                    <a href="" class="text-white" style="text-decoration: none"
+                      >CD</a
+                    >
+                  </li>
+                  <li>
+                    <a href="" class="text-white" style="text-decoration: none"
+                      >DVD</a
+                    >
+                  </li>
+                  <li>
+                    <a href="" class="text-white" style="text-decoration: none"
+                      >Tape</a
+                    >
+                  </li>
+                  <li>
+                    <a href="" class="text-white" style="text-decoration: none"
+                      >Book</a
+                    >
+                  </li>
+                  <li>
+                    <a href="" class="text-white" style="text-decoration: none"
+                      >Magazine</a
+                    >
+                  </li>
+                </ul>
+              </div>
+              <div class="col-lg-4 px-5">
+                <h1 class="py-4">Contact</h1>
+                <p class="navbar-brand">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="icon icon-tabler icon-tabler-home pb-1"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    stroke-width="2"
+                    stroke="currentColor"
+                    fill="none"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  >
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                    <polyline points="5 12 3 12 12 3 21 12 19 12"></polyline>
+                    <path d="M5 12v7a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-7"></path>
+                    <path d="M9 21v-6a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v6"></path>
+                  </svg>
+                  District 3, HCM City, Viet Nam
+                </p>
+                <p>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="icon icon-tabler icon-tabler-mail pb-1"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    stroke-width="2"
+                    stroke="currentColor"
+                    fill="none"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  >
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                    <rect x="3" y="5" width="18" height="14" rx="2"></rect>
+                    <polyline points="3 7 12 13 21 7"></polyline>
+                  </svg>
+                  boinguyen9701@gmail.com
+                </p>
+                <p>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="icon icon-tabler icon-tabler-phone-incoming pb-1"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    stroke-width="2"
+                    stroke="currentColor"
+                    fill="none"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  >
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                    <path
+                      d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2"
+                    ></path>
+                    <line x1="15" y1="9" x2="20" y2="4"></line>
+                    <polyline points="15 5 15 9 19 9"></polyline>
+                  </svg>
+                  0999797979
+                </p>
+              </div>
+            </div>
+
+            <hr class="py-2" />
+
+            <div class="row text-center text-md-start">
+              <div class="footer-end-left col-md-8 mb-5">
+                <h5>Copyright &copy; by: Aptech</h5>
+              </div>
+              <div
+                class="footer-end-right col-md-4 mb-5 text-center text-md-end"
+              >
+                <ul class="list-unstyled list-inline">
+                  <li class="list-inline-item">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="icon icon-tabler icon-tabler-brand-google"
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      stroke-width="2"
+                      stroke="currentColor"
+                      fill="none"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    >
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                      <path d="M17.788 5.108a9 9 0 1 0 3.212 6.892h-8"></path>
+                    </svg>
+                  </li>
+                  <li class="list-inline-item">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="icon icon-tabler icon-tabler-brand-facebook"
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      stroke-width="2"
+                      stroke="currentColor"
+                      fill="none"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    >
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                      <path
+                        d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3"
+                      ></path>
+                    </svg>
+                  </li>
+                  <li class="list-inline-item">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="icon icon-tabler icon-tabler-brand-twitter"
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      stroke-width="1.25"
+                      stroke="currentColor"
+                      fill="none"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    >
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                      <path
+                        d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c-.002 -.249 1.51 -2.772 1.818 -4.013z"
+                      ></path>
+                    </svg>
+                  </li>
+                  <li class="list-inline-item">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="icon icon-tabler icon-tabler-brand-linkedin"
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      stroke-width="1.25"
+                      stroke="currentColor"
+                      fill="none"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    >
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                      <rect x="4" y="4" width="16" height="16" rx="2"></rect>
+                      <line x1="8" y1="11" x2="8" y2="16"></line>
+                      <line x1="8" y1="8" x2="8" y2="8.01"></line>
+                      <line x1="12" y1="16" x2="12" y2="11"></line>
+                      <path d="M16 16v-3a2 2 0 0 0 -4 0"></path>
+                    </svg>
+                  </li>
+                  <li class="list-inline-item">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="icon icon-tabler icon-tabler-brand-youtube"
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      stroke-width="1.25"
+                      stroke="currentColor"
+                      fill="none"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    >
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                      <rect x="3" y="5" width="18" height="14" rx="4"></rect>
+                      <path d="M10 9l5 3l-5 3z"></path>
+                    </svg>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </footer>
       </div>
       <!-- END FOOTER -->
