--- a/aboutUs.html
+++ b/aboutUs.html
@@ -18,11 +18,16 @@
   </div>
 
   <div class="about-teamMember text-center">
-    <h3 class="text-uppercase">Member</h3>
+    <h3 class="text-uppercase pt-3">Member</h3>
     <div class="row text-center justify-content-center">
-      <div class="left-member col-12 col-md-6 row">
+      <div class="left-member col-12 col-md-6 row pt-1">
         <div class="image col-6 col-md-12">
-          <img src="image/member.jpg" alt="Duy An" class="img-fluid" />
+          <img
+            src="image/IMG_E2613.JPG"
+            alt="Duy An"
+            class="img-fluid"
+            width="517"
+          />
         </div>
         <div class="Describe col-6 col-md-12">
           <div class="text-start text-md-center pt-3">
@@ -31,9 +36,9 @@
           </div>
         </div>
       </div>
-      <div class="right-member col-12 col-md-6 row">
+      <div class="right-member col-12 col-md-6 row pt-1">
         <div class="image col-6 col-md-12">
-          <img src="image/member.jpg" alt="Duy Khuong" class="img-fluid" />
+          <img src="image/khuong.png" alt="Duy Khuong" class="img-fluid" />
         </div>
         <div class="Describe col-6 col-md-12">
           <div class="text-start text-md-center pt-3 pt-md-1">
