--- a/aboutUs.html
+++ b/aboutUs.html
@@ -18,8 +18,8 @@
   </div>
 
   <div class="about-teamMember text-center">
-    <h3 class="text-uppercase pt-3">Member</h3>
-    <div class="row text-center justify-content-center">
+    <h3 class="text-uppercase mt-5 py-3">Member</h3>
+    <div class="row text-center justify-content-center mb-5">
       <div class="left-member col-12 col-md-6 row pt-1">
         <div class="image col-6 col-md-12">
           <img
