--- a/blog.html
+++ b/blog.html
@@ -39,7 +39,7 @@
     <div class="row col-12">
       <div class="col-md-3">
         <img
-          src="image/maylangthang.jpg"
+          src="image/e-product/maylangthang.jpg"
           alt=""
           width="100%"
           class="d-md-block d-none img-fluid"
@@ -67,7 +67,7 @@
     <div class="row col-12">
       <div class="col-md-3">
         <img
-          src="image/souloftheforest.jpg"
+          src="image/e-product/souloftheforest.jpg"
           alt=""
           width="100%"
           class="d-md-block d-none img-fluid"
@@ -99,7 +99,7 @@
     <h1 class="title">Context</h1>
     <div class="col-md-3">
       <img
-        src="image/americanidol.jpg"
+        src="image/e-product/americanidol.jpg"
         alt=""
         width="100%"
         class="d-md-block d-none img-fluid"
@@ -127,7 +127,7 @@
   <div class="row col-12 right mt-3">
     <div class="col-md-3">
       <img
-        src="image/baihathaynhat.jpg"
+        src="image/e-product/baihathaynhat.jpg"
         alt=""
         width="100%"
         class="d-md-block d-none img-fluid"
