--- a/index.html
+++ b/index.html
@@ -23,85 +23,113 @@
     </style>
   </head>
   <body>
-    <div class="container-fluid" ng-app="myApp" ng-controller="ctrl">
+    <div class="container-fluid" ng-app="myApp" ng-controller="index">
       <!-- HEADER MENU FOR PC -->
       <div class="header-pc">
         <nav
-          class="navbar navbar-expand-sm bg-light pt-20 justify-content-center"
+          class="navbar navbar-expand-md bg-light pt-20 justify-content-md-center justify-content-start"
         >
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a href="#!home" class="navbar-brand">
-                <img
-                  src="image/logo.jpg"
-                  alt="logo"
-                  width="40px"
-                  height="40px"
-                  style="border-radius: 20px"
-                />
-              </a>
-            </li>
-            <li class="nav-item">
-              <a href="#!home" class="nav-link">Home</a>
-            </li>
-            <li class="nav-item">
-              <a href="#!product" class="nav-link">Product</a>
-            </li>
-            <li class="nav-item">
-              <a href="#!membership" class="nav-link">Membership</a>
-            </li>
-            <li class="nav-item"><a href="#!blog" class="nav-link">Blog</a></li>
-            <li class="nav-item">
-              <a href="#!aboutUs" class="nav-link">About Us</a>
-            </li>
-            <li class="nav-item">
-              <a href="#!contactUs" class="nav-link">Contact Us</a>
-            </li>
-            <li class="nav-item">
-              <a href="#!cart" class="nav-link">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="icon icon-tabler icon-tabler-shopping-cart"
-                  width="24"
-                  height="24"
-                  viewBox="0 0 24 24"
-                  stroke-width="2"
-                  stroke="currentColor"
-                  fill="none"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                >
-                  <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                  <circle cx="6" cy="19" r="2"></circle>
-                  <circle cx="17" cy="19" r="2"></circle>
-                  <path d="M17 17h-11v-14h-2"></path>
-                  <path d="M6 5l14 1l-1 7h-13"></path>
-                </svg>
-                Cart</a
-              >
-            </li>
-            <li class="nav-item">
-              <a href="#!logInSignUp" class="nav-link"
-                ><svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  class="icon icon-tabler icon-tabler-user"
-                  width="24"
-                  height="24"
-                  viewBox="0 0 24 24"
-                  stroke-width="2"
-                  stroke="currentColor"
-                  fill="none"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                >
-                  <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                  <circle cx="12" cy="7" r="4"></circle>
-                  <path d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"></path>
-                </svg>
-                Log-in</a
-              >
-            </li>
-          </ul>
+          <div class="container">
+            <a href="#!home" class="navbar-brand d-md-none d-block">
+              <img
+                src="image/logo.jpg"
+                alt="logo"
+                width="40px"
+                height="40px"
+                style="border-radius: 20px"
+              />
+            </a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#mynavbar"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div
+              id="mynavbar"
+              class="collapse navbar-collapse justify-content-md-center"
+            >
+              <ul class="navbar-nav align-items-end align-items-md-center">
+                <li class="nav-item">
+                  <a href="#!home" class="navbar-brand d-md-block d-none">
+                    <img
+                      src="image/logo.jpg"
+                      alt="logo"
+                      width="40px"
+                      height="40px"
+                      style="border-radius: 20px"
+                    />
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a href="#!home" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a href="#!product" class="nav-link">Product</a>
+                </li>
+                <li class="nav-item">
+                  <a href="#!membership" class="nav-link">Membership</a>
+                </li>
+                <li class="nav-item">
+                  <a href="#!blog" class="nav-link">Blog</a>
+                </li>
+                <li class="nav-item">
+                  <a href="#!aboutUs" class="nav-link">About Us</a>
+                </li>
+                <li class="nav-item">
+                  <a href="#!contactUs" class="nav-link">Contact Us</a>
+                </li>
+                <li class="nav-item">
+                  <a href="#!cart" class="nav-link">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="icon icon-tabler icon-tabler-shopping-cart"
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      stroke-width="2"
+                      stroke="currentColor"
+                      fill="none"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    >
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                      <circle cx="6" cy="19" r="2"></circle>
+                      <circle cx="17" cy="19" r="2"></circle>
+                      <path d="M17 17h-11v-14h-2"></path>
+                      <path d="M6 5l14 1l-1 7h-13"></path>
+                    </svg>
+                    Cart</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a href="#!logInSignUp" class="nav-link"
+                    ><svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="icon icon-tabler icon-tabler-user"
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      stroke-width="2"
+                      stroke="currentColor"
+                      fill="none"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    >
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                      <circle cx="12" cy="7" r="4"></circle>
+                      <path
+                        d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"
+                      ></path>
+                    </svg>
+                    Log-in</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
         </nav>
       </div>
       <!-- END HEADER MENU FOR PC -->
@@ -116,10 +144,12 @@
 
       <!-- FOOTER -->
       <div class="footer">
-        <footer class="bg-black text-white mt-3">
-          <div class="container text-center text-md-start">
-            <div class="row text-center text-md-start pt-4">
-              <div class="col-md-7 col-lg-5 mx-auto px-5">
+        <footer class="bg-black text-white">
+          <div class="text-center text-md-start row">
+            <div
+              class="row col-12 text-center text-md-start pt-4 align-items-start"
+            >
+              <div class="col-md-7 col-lg-5 px-5">
                 <h1 class="py-4">Rhythm House</h1>
                 <p>
                   Established in 2007 by Mark Boatman and David McGuire, Rhythm
@@ -231,9 +261,9 @@
 
             <hr class="py-2" />
 
-            <div class="row text-center text-md-start">
-              <div class="footer-end-left col-md-8 mb-5">
-                <h5>Copyright &copy; by: Aptech</h5>
+            <div class="row col-12 text-center text-md-start">
+              <div class="footer-end-left col-md-8 mb-5 px-5">
+                <h5 class="copyright">Copyright &copy; by: Aptech</h5>
               </div>
               <div
                 class="footer-end-right col-md-4 mb-5 text-center text-md-end"
@@ -344,5 +374,10 @@
 
     <link src="index.css" />
     <script src="index.js"></script>
+    <style>
+      .copyright {
+        font-family: "Times New Roman", Times, serif;
+      }
+    </style>
   </body>
 </html>
