--- a/product.html
+++ b/product.html
@@ -1,130 +1,233 @@
 <style>
-    .container {
-        display: flex;
-        justify-content: flex-start;
-    }
+  .container {
+    display: flex;
+    justify-content: flex-start;
+  }
 
-    .row {
-        display: flex;
-        align-items: stretch;
+  .row {
+    display: flex;
+    align-items: stretch;
+  }
 
-    }
+  .each-product {
+    background-color: rgb(187, 187, 187);
+    width: fit-content;
+    padding: 0 0 10px 0;
+  }
 
+  .right {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    flex-direction: column;
+  }
 
+  .searchs {
+    display: flex;
+    justify-content: flex-start;
+  }
 
-    .each-product {
-        background-color: rgb(187, 187, 187);
-        width: fit-content;
-        padding: 0 0 10px 0;
-    }
+  .search_1 {
+    padding: 1px;
+  }
 
-    .right {
-        display: flex;
-        justify-content: flex-end;
-        align-items: flex-end;
-        flex-direction: column;
+  .card-category {
+    box-shadow: 0px 2px 2px 0px grey;
+  }
 
-    }
+  .card-types {
+    box-shadow: 0px 2px 2px 0px grey;
+  }
 
-    .searchs {
-        display: flex;
-        justify-content: flex-start;
-        
-    }
-
-    .search_1 {
-        padding: 1px;
-
-    }
-
-    .card-category {
-        box-shadow: 0px 2px 2px 0px grey;
-
-
-    }
-
-    .card-types {
-        box-shadow: 0px 2px 2px 0px grey;
-
-
-    }
-
-    .card-year {
-        box-shadow: 0px 2px 2px 0px grey;
-
-    }
+  .card-year {
+    box-shadow: 0px 2px 2px 0px grey;
+  }
+  h2,
+  h3,
+  h5,
+  p {
+    font-size: large;
+  }
+  h5 {
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  }
+  h3 {
+    font-family: "Times New Roman", Times, serif;
+  }
 </style>
-<div class="container-fluid">
-    <div class="content row">
-        <div class="left-content col-8 row">
-            <div class="image_1 col-4 ">
-                <div class="each-product text-center">
-                    <img src="image/lalaland.jpg" alt="" class="card-img-top img-fluid">
-                    <h3>THE LA LA LAND MOVIE</h3>
-                    <h5>MOVIE</h5>
-                    <p>200K(CART)</p>
-                    <input type="button" value="Add to Cart">
-                </div>
-            </div>
-            <div class="image_1 col-4 ">
-                <div class="each-product text-center">
-                    <img src="image/lalaland.jpg" alt="" class="card-img-top img-fluid">
-                    <h3>THE LA LA LAND MOVIE</h3>
-                    <h5>MOVIE</h5>
-                    <p>200K(CART)</p>
-                    <input type="button" value="Add to Cart">
-                </div>
-            </div>
+<div class="container-fluid" ng-controller="product">
+  <div class="content row">
+    <div class="left-content col-sm-9 col-7 row">
+      <div
+        class="image_1 col-md-4 col-sm-6 col-12 my-3"
+        ng-repeat="eachProduct in listOfProduct"
+      >
+        <div class="each-product text-center">
+          <img
+            ng-src="{{eachProduct.image}}"
+            alt=""
+            class="card-img-top img-fluid"
+          />
+          <h3>{{eachProduct.name}}</h3>
+          <h5>{{eachProduct.category}}</h5>
+          <p>${{eachProduct.price}}</p>
+          <input type="button" value="Add to Cart" class="btn btn-primary" />
         </div>
-
-        <div class="right-content col-4 row mb-3">
-            <div class="row text-center">
-                <div class="search_1 col-11">                 
-                        <input type="text" placeholder="search" ng-model="search" class="form-control">                  
-                </div>
-                <div class="col-1" ng-click="">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-search" width="30"
-                        height="30" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
-                        stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                        <circle cx="10" cy="10" r="7"></circle>
-                        <line x1="21" y1="21" x2="15" y2="15"></line>
-                    </svg>
-                </div>
-            </div>
-
-            <div>
-                <div class="card-category text-start px-4 py-3 ">
-                    <h2>CATEGORY</h2>
-                    <input type="radio" name="radioCategory" id="" ng-model="" ng-value="'All'">All <br>
-                    <input type="radio" name="radioCategory" id="" ng-model="" ng-value="'Movies'">Movies<br>
-                    <input type="radio" name="radioCategory" id="" ng-model="" ng-value="'Music'">Music <br>
-                    <input type="radio" name="radioCategory" id="" ng-model="" ng-value="'Band'">Band <br>
-                    <input type="radio" name="radioCategory" id="" ng-model="" ng-value="'Solo performance'">Solo
-                    performance<br>
-                </div>
-            </div>
-
-            <div>
-                <div class="card-types text-start px-4 py-3">
-                    <h2>TYPES</h2>
-                    <input type="radio" name="radioTypes" id="" ng-model="" ng-value="'CD'">CD <br>
-                    <input type="radio" name="radioTypes" id="" ng-model="" ng-value="'DVD'">DVD <br>
-                    <input type="radio" name="radioTypes" id="" ng-model="" ng-value="'Tape'">Tape <br>
-                    <input type="radio" name="radioTypes" id="" ng-model="" ng-value="'Book'">Book <br>
-                    <input type="radio" name="radioTypes" id="" ng-model="" ng-value="'Magazine'">Magazine <br>
-                </div>
-            </div>
-
-            <div class="">
-                <div class="card-year text-start px-4 py-3">
-                    <h2>YEAR</h2>
-                    <input type="radio" name="radioYear" id="" ng-model="" ng-value="''">123 <br>
-                    <input type="radio" name="radioYear" id="" ng-model="" ng-value="''">123 <br>
-                    <input type="radio" name="radioYear" id="" ng-model="" ng-value="''">123
-                </div>
-            </div>
-
-        </div>
+      </div>
     </div>
+
+    <div class="right-content col-sm-3 col-5 mb-3">
+      <div class="row text-center">
+        <div class="search_1 col-11">
+          <input
+            type="text"
+            placeholder="search"
+            ng-model="search"
+            class="form-control"
+          />
+        </div>
+        <div class="col-1" ng-click="">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="icon icon-tabler icon-tabler-search"
+            width="30"
+            height="30"
+            viewBox="0 0 24 24"
+            stroke-width="2"
+            stroke="currentColor"
+            fill="none"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+            <circle cx="10" cy="10" r="7"></circle>
+            <line x1="21" y1="21" x2="15" y2="15"></line>
+          </svg>
+        </div>
+      </div>
+
+      <div>
+        <div class="card-category text-start px-4 py-3">
+          <h2>CATEGORY</h2>
+          <input
+            type="radio"
+            name="radioCategory"
+            id=""
+            ng-model="radioCategory"
+            ng-value="''"
+          />All <br />
+          <input
+            type="radio"
+            name="radioCategory"
+            id=""
+            ng-model="radioCategory"
+            ng-value="'Movies'"
+          />Movies<br />
+          <input
+            type="radio"
+            name="radioCategory"
+            id=""
+            ng-model="radioCategory"
+            ng-value="'Music'"
+          />Music <br />
+          <input
+            type="radio"
+            name="radioCategory"
+            id=""
+            ng-model="radioCategory"
+            ng-value="'Band'"
+          />Band <br />
+          <input
+            type="radio"
+            name="radioCategory"
+            id=""
+            ng-model="radioCategory"
+            ng-value="'Solo performance'"
+          />Solo performance<br />
+        </div>
+      </div>
+
+      <div>
+        <div class="card-types text-start px-4 py-3">
+          <h2>TYPES</h2>
+          <input
+            type="radio"
+            name="radioTypes"
+            id=""
+            ng-model="radioTypes"
+            ng-value="''"
+          />All <br />
+          <input
+            type="radio"
+            name="radioTypes"
+            id=""
+            ng-model="radioTypes"
+            ng-value="'CD'"
+          />CD <br />
+          <input
+            type="radio"
+            name="radioTypes"
+            id=""
+            ng-model="radioTypes"
+            ng-value="'DVD'"
+          />DVD <br />
+          <input
+            type="radio"
+            name="radioTypes"
+            id=""
+            ng-model="radioTypes"
+            ng-value="'Tape'"
+          />Tape <br />
+          <input
+            type="radio"
+            name="radioTypes"
+            id=""
+            ng-model="radioTypes"
+            ng-value="'Book'"
+          />Book <br />
+          <input
+            type="radio"
+            name="radioTypes"
+            id=""
+            ng-model="radioTypes"
+            ng-value="'Magazine'"
+          />Magazine <br />
+        </div>
+      </div>
+
+      <div class="">
+        <div class="card-year text-start px-4 py-3">
+          <h2>YEAR</h2>
+          <input
+            type="radio"
+            name="radioYear"
+            id=""
+            ng-model="radioYear"
+            ng-value="''"
+          />All <br />
+          <input
+            type="radio"
+            name="radioYear"
+            id=""
+            ng-model="radioYear"
+            ng-value="''"
+          />123 <br />
+          <input
+            type="radio"
+            name="radioYear"
+            id=""
+            ng-model="radioYear"
+            ng-value="''"
+          />123 <br />
+          <input
+            type="radio"
+            name="radioYear"
+            id=""
+            ng-model="radioYear"
+            ng-value="''"
+          />123
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
