--- a/blog.html
+++ b/blog.html
@@ -124,7 +124,7 @@
       </p>
     </div>
   </div>
-  <div class="row col-12 right mt-3">
+  <div class="row col-12 right my-3">
     <div class="col-md-3">
       <img
         src="image/e-product/baihathaynhat.jpg"
