--- a/home.html
+++ b/home.html
@@ -19,12 +19,20 @@
   }
 
   .cart-big {
-    background-color: rgb(197, 196, 196);
+    border-radius: 20px;
+    background-color: rgba(221, 220, 220, 0.3);
     width: fit-content;
   }
   .cart-small {
-    background-color: rgb(197, 196, 196);
+    background-color: rgba(221, 220, 220, 0.3);
     width: fit-content;
+    border-radius: 15px;
+  }
+  .cart-big:hover,
+  .cart-small:hover {
+    transition: 0.2s;
+    background-color: rgba(225, 225, 225, 0.6);
+    box-shadow: 0px 0px 25px rgb(23, 203, 173);
   }
   .homeContent {
     background-image: linear-gradient(
@@ -47,36 +55,49 @@
   h3.Title:hover {
     color: rgb(180, 15, 15);
   }
+  .revealOfHomePage.lsctsm {
+    position: relative;
+    opacity: 0;
+    transform: translateX(300px);
+    transition: all 1s ease-in;
+  }
+  .revealOfHomePage.lsctsm.active {
+    opacity: 1;
+    transform: translateX(0);
+  }
+  .revealOfHomePage.alca {
+    position: relative;
+    opacity: 0;
+    transform: translateX(-300px);
+    transition: all 1s ease-in;
+  }
+  .revealOfHomePage.alca.active {
+    opacity: 1;
+    transform: translateX(0);
+  }
+  .Btn-addToCart {
+    border: none;
+    border-radius: 15px;
+    background-color: rgb(255, 62, 62);
+    padding: 10px 15px 10px 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 450;
+    margin: 0 0 10px 0;
+  }
+  .Btn-addToCart:hover {
+    box-shadow: 0 0 5px rgb(255, 0, 0);
+    font-weight: 500;
+  }
 </style>
 <div class="container-fluid homeContent" ng-controller="home">
   <div class="carousel row d-sm-flex d-none">
     <!-- Carousel -->
     <div id="demo" class="carousel slide col-md-10" data-bs-ride="carousel">
-      <!-- Indicators/dots -->
-      <div class="carousel-indicators">
-        <button
-          type="button"
-          data-bs-target="#demo"
-          data-bs-slide-to="0"
-          class="active"
-        ></button>
-        <button
-          type="button"
-          data-bs-target="#demo"
-          data-bs-slide-to="1"
-        ></button>
-        <button
-          type="button"
-          data-bs-target="#demo"
-          data-bs-slide-to="2"
-        ></button>
-      </div>
-
       <!-- The slideshow/carousel -->
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img
-            src="image/e-product/okComputer.png"
+            src="image/e-product/carousel/maylangthang.jpg"
             alt="Los Angeles"
             class="d-block"
             style="width: 100%"
@@ -84,7 +105,7 @@
         </div>
         <div class="carousel-item">
           <img
-            src="image/e-product/souloftheforest.jpg"
+            src="image/e-product/carousel/souloftheforest.jpg"
             alt="Chicago"
             class="d-block"
             style="width: 100%"
@@ -92,7 +113,7 @@
         </div>
         <div class="carousel-item">
           <img
-            src="image/e-product/maylangthang.jpg"
+            src="image/e-product/carousel/okComputer.png"
             alt="New York"
             class="d-block"
             style="width: 100%"
@@ -122,7 +143,10 @@
 
   <div class="row">
     <div class="left-content col-12 col-xl-8 px-3">
-      <div class="album row py-3 mt-4">
+      <div
+        class="album revealOfHomePage alca row py-3"
+        style="margin-top: 80px"
+      >
         <h1 class="title">Album</h1>
         <div class="album1 col-6">
           <div class="cart-big pb-4">
@@ -144,7 +168,7 @@
               type="button"
               value="Add to cart"
               ng-click="addAlbumToCart(0)"
-              class="btn btn-primary"
+              class="Btn-addToCart"
             />
           </div>
         </div>
@@ -168,13 +192,16 @@
               type="button"
               value="Add to cart"
               ng-click="addAlbumToCart(1)"
-              class="btn btn-primary"
+              class="Btn-addToCart"
             />
           </div>
         </div>
       </div>
 
-      <div class="category row py-3 mt-4">
+      <div
+        class="category revealOfHomePage alca row py-3"
+        style="margin: 250px 0 0 0"
+      >
         <h1 class="title">Category</h1>
         <div class="category1 col-6">
           <div class="cart-big pb-4">
@@ -196,7 +223,7 @@
               type="button"
               value="Add to cart"
               ng-click="addCategoryToCart(0)"
-              class="btn btn-primary"
+              class="Btn-addToCart"
             />
           </div>
         </div>
@@ -220,7 +247,7 @@
               type="button"
               value="Add to cart"
               ng-click="addCategoryToCart(1)"
-              class="btn btn-primary"
+              class="Btn-addToCart"
             />
           </div>
         </div>
@@ -228,7 +255,7 @@
     </div>
 
     <div class="right-content col-12 col-xl-4 px-3">
-      <div class="liveShows my-5">
+      <div class="liveShows revealOfHomePage lsctsm" style="margin-top: 250px">
         <div class="liveshow row py-3">
           <h1 class="title">Live Shows</h1>
           <div class="liveshow1 col-6">
@@ -276,7 +303,10 @@
         </div>
       </div>
       <div class="contest my-5">
-        <div class="contest row py-3">
+        <div
+          class="contest revealOfHomePage lsctsm row py-3"
+          style="margin-top: 200px"
+        >
           <h1 class="title">Contest</h1>
           <div class="contest1 col-6">
             <div class="cart-small pb-4">
@@ -322,7 +352,10 @@
           </div>
         </div>
       </div>
-      <div class="soldMonthly my-5">
+      <div
+        class="soldMonthly revealOfHomePage lsctsm"
+        style="margin: 200px 0 300px 0"
+      >
         <div class="soldMonthly row py-3">
           <h1 class="title">Sold Monthly</h1>
           <div class="soldMonthly1 col-6">
