--- a/logInSignUp.html
+++ b/logInSignUp.html
@@ -1,10 +1,20 @@
 <style>
   .formlas {
+    margin-left: 10%;
+    width: 80%;
+    justify-content: center;
+  }
+  .logInSignUpContent {
     background-image: linear-gradient(
-      135deg,
-      rgb(19, 186, 233),
-      rgb(108, 51, 231)
+      45deg,
+      rgb(253, 158, 255),
+      rgb(155, 237, 255)
     );
+    min-height: 60vh;
+  }
+  .left,
+  .right {
+    max-width: 500px;
   }
 
   .in_1 {
@@ -43,7 +53,7 @@
     padding: 5px 10px 5px 10px;
   }
 </style>
-<div class="container">
+<div class="container-fluid logInSignUpContent">
   <div class="formlas row">
     <div class="left col-md-6 col-12 my-5 text-center">
       <form action="" class="form-control">
