--- a/membership.html
+++ b/membership.html
@@ -2,6 +2,11 @@
   .membershipContent {
     align-items: center;
     justify-content: center;
+    background-image: linear-gradient(
+      45deg,
+      rgb(253, 158, 255),
+      rgb(155, 237, 255)
+    );
   }
   div.right-infor {
     display: flex;
@@ -24,16 +29,33 @@
     text-align: center;
   }
   div.notMember {
+    min-height: 200px;
     text-align: center;
     padding: 40px 40px 40px 40px;
-    background-image: linear-gradient(0, rgb(216, 187, 25), rgb(239, 60, 11));
-    border-radius: 50px;
   }
   #nmrfn {
     font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
       "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
     font-weight: bold;
-    text-shadow: rgb(0, 255, 195) 5px 2px 8px;
+  }
+  .btn-registry {
+    margin-top: 10px;
+    border: none;
+    border-radius: 20px;
+    padding: 10px 20px 10px 20px;
+    background-color: rgb(1, 204, 255);
+    font-size: larger;
+    font-family: "Times New Roman", Times, serif;
+
+    transition: 0.4s;
+  }
+  .btn-registry:hover {
+    border-radius: 30px;
+    padding: 15px 25px 15px 25px;
+    font-size: x-large;
+    transition: 0.4s;
+    border: none;
+    box-shadow: 0px 0px 20px rgb(221, 0, 103);
   }
   div.benefit {
     justify-content: center;
@@ -66,6 +88,7 @@
     justify-content: center;
   }
   .b-left {
+    max-width: 300px;
     padding: 20px;
     background-image: linear-gradient(
       45deg,
@@ -75,6 +98,7 @@
     border-radius: 15px;
   }
   .b-right {
+    max-width: 300px;
     padding: 20px;
 
     background-image: linear-gradient(
@@ -84,17 +108,45 @@
     );
     border-radius: 15px;
   }
+  .memmber-img {
+    min-width: 250px;
+    max-width: 700px;
+  }
+  .revealOfMembershipPage.benefit {
+    position: relative;
+    opacity: 0;
+    transform: translateY(200px);
+    transition: all 1s ease;
+  }
+  .revealOfMembershipPage.benefit.active {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  .revealOfMembershipPage.notMember {
+    position: relative;
+    opacity: 0;
+    transform: translateY(200px);
+    transition: all 1s ease;
+  }
+  .revealOfMembershipPage.notMember.active {
+    opacity: 1;
+    transform: translateY(0);
+  }
 </style>
 
 <div class="container-fluid" ng-controller="membership">
   <div class="membershipContent row">
-    <div class="left-infor col-12 col-md-6">
-      <div class="member-image">
-        <img src="image/member.jpg" alt="" class="img-fluid rounded my-3" />
+    <div class="left-infor col-12">
+      <div class="member-image" style="margin: 5vh 0 200px 0">
+        <img
+          src="image/member.jpg"
+          alt=""
+          class="memmber-img img-fluid rounded my-3"
+        />
       </div>
 
       <div class="cal-point">
-        <div class="benefit">
+        <div class="benefit revealOfMembershipPage">
           <div class="b-dntf mb-3">
             <div class="b-ntf">
               <h1 class="memberBenefit">Member benefits</h1>
@@ -115,7 +167,7 @@
             <h3>You will get 20 points with each product bought!</h3>
           </div>
         </div>
-        <div class="cal">
+        <div class="cal" style="margin: 100px 0 150px 100px">
           <h5>
             Below are discount code that you can exhange point into (apply for
             total bill)
@@ -128,17 +180,14 @@
         </div>
       </div>
     </div>
-    <div class="right-infor col-12 col-md-6" ng-init="log-in: true">
-      <div class="isMember" ng-show="log-in">
-        <p>You are a member!</p>
-        <div class="status">
-          <p>Your Status: <progress value="20" max="100"></progress></p>
-        </div>
-      </div>
-      <div class="notMember" ng-hide="log-in">
+    <div class="right-infor col-12 py-3">
+      <div
+        class="notMember revealOfMembershipPage"
+        style="margin: 200px 0 500px 0"
+      >
         <p id="nmrfn">You are not a member? Registry for now!</p>
         <a href="#!logInSignUp">
-          <input type="button" value="Registry" class="btn btn-primary" />
+          <input type="button" value="Registry" class="btn-registry" />
         </a>
       </div>
     </div>
