--- a/product.html
+++ b/product.html
@@ -10,9 +10,14 @@
   }
 
   .each-product {
-    background-color: rgb(187, 187, 187);
+    background-color: rgb(207, 207, 207, 0.3);
     width: fit-content;
     padding: 0 0 10px 0;
+  }
+  .each-product:hover {
+    background-color: rgb(207, 207, 207, 0.6);
+    box-shadow: 5px 5px 10px rgb(87, 87, 87);
+    transition: 0.1s;
   }
 
   .right {
@@ -33,6 +38,7 @@
 
   .card-category {
     box-shadow: 0px 2px 2px 0px grey;
+    align-items: center;
   }
 
   .card-types {
@@ -54,19 +60,7 @@
   h3 {
     font-family: "Times New Roman", Times, serif;
   }
-  .Modal {
-    display: none;
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 10vw;
-    top: 2vh;
-    width: 80vw; /* Full width */
-    min-height: 460px; /* Full height */
-    max-height: 700px;
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(211, 209, 209);
-    border-radius: 10px;
-  }
+
   h4.pi {
     margin: 5px 0 10px 30px;
     color: rgb(44, 6, 81);
@@ -74,11 +68,88 @@
       "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   }
   .Btn-close {
+    font-size: 2.3vw;
+    width: fit-content;
     padding: 0 10px 0 10px;
     border-radius: 5px;
     background-color: red;
     font-size: 1.2rem;
     font-family: "Times New Roman", Times, serif;
+  }
+  .Modal {
+    display: none;
+    position: fixed;
+    top: -50px;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    /* z-index: 1;  Sit on top */
+    /*left: 10vw;
+    top: 2vh; 
+    width: 80vw;  Full width
+    min-height: 460px;
+    max-height: 700px;*/
+    /*overflow: auto;  Enable scroll if needed */
+
+    animation: fadeIn linear 0.1s;
+  }
+
+  @keyframes fadeIn {
+    from {
+      opacity: 0.2;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+  @keyframes growth {
+    from {
+      transform: scale(var(--grow-from));
+    }
+    to {
+      transform: scale(--grow-to);
+    }
+  }
+  .Modal__overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+  .Modal-content {
+    width: 80%;
+    top: 100px;
+    left: 10vw;
+    bottom: 80px;
+    position: absolute;
+    z-index: 1;
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    --grow-from: 0.7;
+    --grow-to: 1;
+    animation: growth linear 0.1s;
+    padding-bottom: 10px;
+    overflow: auto;
+  }
+  .content {
+    background-image: linear-gradient(
+      45deg,
+      rgb(253, 158, 255),
+      rgb(155, 237, 255)
+    );
+  }
+  .Btn-addToCart {
+    border: none;
+    border-radius: 15px;
+    background-color: rgb(255, 62, 62);
+    padding: 10px 15px 10px 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 450;
+    margin: 0 0 20px 0;
+  }
+  .Btn-addToCart:hover {
+    box-shadow: 0 0 5px rgb(255, 0, 0);
+    font-weight: 500;
   }
 </style>
 
@@ -87,7 +158,7 @@
     <div class="left-content col-sm-9 col-7 row">
       <div
         class="image_1 col-md-4 col-sm-6 col-12 my-3"
-        ng-repeat="eachProduct in listOfProduct"
+        ng-repeat="eachProduct in listOfProduct | filter:{category: radioCategory} | filter:{type: radioTypes} | filter:{yearStatus: radioYear} | filter:{name: search} "
       >
         <div class="each-product text-center">
           <img
@@ -99,13 +170,13 @@
             ng-click="showModal($index)"
           />
           <h3>{{eachProduct.name}}</h3>
-          <h5>{{eachProduct.category}}</h5>
+          <h5>{{eachProduct.category}} - {{eachProduct.type}}</h5>
           <p>${{eachProduct.price}}</p>
           <input
             type="button"
             value="Add to Cart"
             ng-click="addProductToCart($index)"
-            class="btn btn-primary"
+            class="Btn-addToCart"
           />
         </div>
       </div>
@@ -113,32 +184,14 @@
 
     <div class="right-content col-sm-3 col-5 mb-3">
       <div class="col-12">
-        <div class="row text-center">
-          <div class="search_1 col-11">
+        <div class="row px-2 pt-2 text-center justify-items-center">
+          <div class="search_1 col-12">
             <input
               type="text"
               placeholder="search"
               ng-model="search"
               class="form-control"
             />
-          </div>
-          <div class="col-1" ng-click="">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              class="icon icon-tabler icon-tabler-search"
-              width="30"
-              height="30"
-              viewBox="0 0 24 24"
-              stroke-width="2"
-              stroke="currentColor"
-              fill="none"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            >
-              <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-              <circle cx="10" cy="10" r="7"></circle>
-              <line x1="21" y1="21" x2="15" y2="15"></line>
-            </svg>
           </div>
         </div>
       </div>
@@ -151,34 +204,28 @@
             id=""
             ng-model="radioCategory"
             ng-value="''"
+            ng-checked="true"
           />All <br />
           <input
             type="radio"
             name="radioCategory"
             id=""
             ng-model="radioCategory"
-            ng-value="'Movies'"
+            ng-value="'movie'"
           />Movies<br />
           <input
             type="radio"
             name="radioCategory"
             id=""
             ng-model="radioCategory"
-            ng-value="'Music'"
-          />Music <br />
-          <input
-            type="radio"
-            name="radioCategory"
-            id=""
-            ng-model="radioCategory"
-            ng-value="'Band'"
+            ng-value="'band'"
           />Band <br />
           <input
             type="radio"
             name="radioCategory"
             id=""
             ng-model="radioCategory"
-            ng-value="'Solo performance'"
+            ng-value="'solo performance'"
           />Solo performance<br />
         </div>
       </div>
@@ -245,28 +292,29 @@
             name="radioYear"
             id=""
             ng-model="radioYear"
-            ng-value="''"
-          />123 <br />
+            ng-value="'before2000'"
+          />Before 2000 <br />
           <input
             type="radio"
             name="radioYear"
             id=""
             ng-model="radioYear"
-            ng-value="''"
-          />123 <br />
+            ng-value="'2000To2010'"
+          />2000-2010 <br />
           <input
             type="radio"
             name="radioYear"
             id=""
             ng-model="radioYear"
-            ng-value="''"
-          />123
+            ng-value="'after2010'"
+          />After 2010
         </div>
       </div>
     </div>
   </div>
   <!-- manual Modal -->
   <div class="Modal mt-md-5" ng-style="manualModal">
+    <div class="Modal__overlay"></div>
     <div class="Modal-content">
       <!-- Modal Header -->
       <div class="Modal-header d-flex">
@@ -300,7 +348,7 @@
 
       <!-- Modal body -->
       <div class="Modal-body row text-start">
-        <div class="img col-md-4 col-12 mx-md-3 mx-0">
+        <div class="img col-md-4 col-12 mx-md-3 mx-sm-0">
           <img
             ng-src="{{productModal[0].image}}"
             alt=""
@@ -308,8 +356,8 @@
             class="img-fluid"
           />
         </div>
-        <div class="describe col-md-7 col-12">
-          <p>
+        <div class="describe col-md-7 col-12 px-0 px-3">
+          <p style="font-size: 1.8vw">
             {{productModal[0].name}} <br />
             <b>
               {{productModal[0].category}} | {{productModal[0].type}} |
